fixed alignment of accolades card and tables in it

--- a/react_portfolio/src/components/AccoladesCard/style.css
+++ b/react_portfolio/src/components/AccoladesCard/style.css
@@ -1,3 +1,3 @@
 #detailsCard {
-    background-color: #f1faee;
+    /* background-color: #f1faee; */
 }
